[package]
name = "sharded-slab"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"
documentation = "https://docs.rs/sharded-slab/0.0.9/sharded_slab"
homepage = "https://github.com/hawkw/sharded-slab"
repository = "https://github.com/hawkw/sharded-slab"
readme = "README.md"
license = "MIT"
keywords = ["slab", "allocator", "lock-free", "atomic"]
categories = ["memory-management", "data-structures", "concurrency"]
description = """
A lock-free concurrent slab.
"""

[badges]
maintenance = { status = "experimental" }

[[bench]]
name = "bench"
harness = false

[target.'cfg(not(sgx))'.dependencies]
lazy_static = "1"

[target.'cfg(sgx)'.dependencies]
lazy_static = { version = "1", features = ["spin_no_std"] }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dev-dependencies]
loom = { version = "0.3", features = ["checkpoint"] }
proptest = "0.10"
criterion = "0.3"
slab = "0.4.2"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.3", features = ["checkpoint"], optional = true }
